--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
     "ngx-bootstrap": "^19.0.2",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
