--- a/Front/ProEventos-App/.hintrc
+++ b/Front/ProEventos-App/.hintrc
@@ -17,6 +17,7 @@
         "image-alt": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
